newly selected vertex group with lattices don't display weights in edit mode. #96054

Closed
opened 2022-02-27 04:50:14 +01:00 by Ethan · 8 comments

System Information
Operating system: MX Linux
Graphics card: GTX 1050 ti

Blender Version

Broken: 3.1.0-beta+v31.4ee4b61dd8d3-linux.x86_64-release 2-26-22 as found on download site
Worked: (3.0.1)
Caused by 0f89bcdbeb

Short description of error
Essentially, when you select a different vertex group with lattice in edit mode, it refuses to display those changes until switched back to object mode then into edit mode again.
does not switch to selected vertex group weights with lattices.

Steps to Reproduce

  • Open .blend file
  • Select first vertex group, select some verts and assign to it
  • Selects vertices and assign to 2nd vertex group

#96054.blend
vokoscreenNG-2022-02-26_21-39-01.mkv

**System Information** Operating system: MX Linux Graphics card: GTX 1050 ti **Blender Version** Broken: 3.1.0-beta+v31.4ee4b61dd8d3-linux.x86_64-release 2-26-22 as found on download site Worked: (3.0.1) Caused by 0f89bcdbeb **Short description of error** Essentially, when you select a different vertex group with lattice in edit mode, it refuses to display those changes until switched back to object mode then into edit mode again. does not switch to selected vertex group weights with lattices. **Steps to Reproduce** - Open .blend file - Select first vertex group, select some verts and assign to it - Selects vertices and assign to 2nd vertex group [#96054.blend](https://archive.blender.org/developer/F12889849/T96054.blend) [vokoscreenNG-2022-02-26_21-39-01.mkv](https://archive.blender.org/developer/F12888504/vokoscreenNG-2022-02-26_21-39-01.mkv)
Author

Added subscriber: @Ethan-Templeton

Added subscriber: @Ethan-Templeton
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade changed title from Does no display weights of newly selected vertex group with lattices in edit mode. to newly selected vertex group with lattices don't display weights in edit mode. 2022-02-28 07:45:30 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Bisecting points me to 0f89bcdbeb
@Sergey hi, can you take a look?
Raising the priority since it's a regression

Bisecting points me to 0f89bcdbeb @Sergey hi, can you take a look? Raising the priority since it's a regression
Sergey Sharybin self-assigned this 2022-02-28 10:16:45 +01:00

This issue was referenced by 6bbf63f251

This issue was referenced by 6bbf63f25195d97c2770470a973bafb35dda5e28

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thank you so much for fixing this bug! I wish you very well! You peeps are amazing! ;)

Thank you so much for fixing this bug! I wish you very well! You peeps are amazing! ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96054
No description provided.